# CVR-Community-Unity-Package-Manager

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  DEV-SETUP.md  README.md  package.json  sample-registry.json
src/: index.html  script.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  config.rs  git_operations.rs  main.rs  models.rs  package_manager.rs
