[package]
name = "cvr-unity-package-manager"
version = "0.1.0"
description = "CVR Community Unity Package Manager - A cross-platform tool for managing Unity packages via Git repositories"
authors = ["NovaVoidHowl"]
license = "MIT"
repository = "https://github.com/NovaVoidHowl/CVR-Community-Unity-Package-Manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "dialog-confirm", "fs-write-file", "dialog-open", "fs-read-dir", "fs-create-dir", "fs-remove-dir", "fs-remove-file", "shell-open", "fs-exists", "dialog-save", "http-request", "fs-read-file"] }
tokio = { version = "1.0", features = ["full"] }
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
anyhow = "1.0"

[features]
# By default, Tauri runs in production mode when `cargo tauri build` is executed
# If you need to use the dev server, you can either disable the default features or add the `dev` feature
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "cvr-unity-package-manager"
path = "src/main.rs"
